Push poms.xml updates